# Nixkart

./: .env  .gitignore  .replit  add_sample_data.py  create_admin.py  create_users.py  db.sqlite3  fix_sites.py  manage.py  package-lock.json  package.json  project_structure.txt  pyproject.toml  requirements.txt  startup.py
attached_assets/: Pasted--Dashboard-and-Home-path-dashboard-name-index-path-dashboard-dashboard-name-1743070309410.txt  Pasted-IntegrityError-at-add-product-UNIQUE-constraint-failed-store-product-slug-Request-Method-POST--1743091327095.txt  Pasted-ValueError-at-product-denim-jeans-The-image-attribute-has-no-file-associated-with-it-Request--1743092101163.txt  Pasted-from-django-urls-import-path-from-import-views-from-views-import-CustomLoginView-catego-1743062084252.txt  Pasted-path-dashboard-name-index-Landing-page-is-now-the-dashboard-path-dashboard--1743069822381.txt  __init__.py  asgi.py  context_processors.py  forms.py  models.py  product_detail.html  settings.py  signals.py  urls.py  views.py  wsgi.py
ecommerce_project/: __init__.py  asgi.py  settings.py  urls.py
static/css/: animations.css  main.css
static/js/: cart_animations.js  dashboard_charts.js  dashboard_websocket.js  main.js  search-filters.js  wishlist.js
staticfiles/js/: animations.js  dashboard_charts.js  three_viewer.js
store/: admin.py  consumers.py  models.py  payments.py  routing.py  settings.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_alter_product_image.py  0002_alter_wishlist_options.py  (+2 more)
templates/: base.html
templates/store/: about.html  (+55 more)
