[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.7",
    "django-allauth>=65.5.0",
    "django-crispy-forms>=2.3",
    "django-environ>=0.12.0",
    "pillow>=11.1.0",
    "stripe>=11.6.0",
]
